--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ body {
 
 .modal__button:hover {
   transition: all 0.3s ease-in;
-  box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.25);
+  scale: 1.05;
 }
 
 .modal__play {
